proper way to put a macron on top of the 'a' in maori

--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -38,7 +38,7 @@ Over the last decade there has been a steady flow of studies on genome-wide sele
 
 ### Selection in Polynesian populations
 
-Projects to capture the genetic diversity of humans have sampled populations worldwide, but outside the populations sampled by the 1000 Genomes Project, the population sample sizes have been small [@Cann2002; @Rosenburg2002; @Mallick2016]. Past studies that have included Oceanic populations have had minimal representation of Polynesian populations, e.g. @Kimura2008 only had 24 Tongan individuals. The latest project for human diversity, the Simons Human Diversity Project, did include the New Zealand M$\bar{a}$ori but they were only represented by a single individual and did not feature in many of the analyses [@Mallick2016].
+Projects to capture the genetic diversity of humans have sampled populations worldwide, but outside the populations sampled by the 1000 Genomes Project, the population sample sizes have been small [@Cann2002; @Rosenburg2002; @Mallick2016]. Past studies that have included Oceanic populations have had minimal representation of Polynesian populations, e.g. @Kimura2008 only had 24 Tongan individuals. The latest project for human diversity, the Simons Human Diversity Project, did include the New Zealand M\tex{\={a}}ori but they were only represented by a single individual and did not feature in many of the analyses [@Mallick2016].
 
 More recently there have been studies that have looked at selection in Polynesian populations but with a focus on a few candidate loci, not at a genome-wide scale [@Myles2011; @Cadzow2016; @Minster2016]. The main feature of these studies has been the investigation of 'thrifty genes'.
 
@@ -59,7 +59,7 @@ The benefits of urate include the its ability to increase blood pressure and it 
 <!-- ?? The fructose response for leads to insulin desensitivity @Johnston2007? -->
 <!--     - fructose blocks glyconeogeneis -> increased glycogen storage -->
 
-An increased level of urate in the blood is called \gls{hu} and is causal of gout. The prevalence of \gls{hu} in Polynesian populations is higher than many other populations [@Gosling2014], and with it are higher prevalences of the co-morbidities of gout, diabetes, obesity, dyslipidemia, kidney disease, and \gls{cvd} [@Winnard2013]. In New Zealand, gout prevalence is ~3.1%, however, prevalence in M$\bar{a}$ori and Pacific peoples is 6-8% with 40% of individuals with gout also having diabetes or \gls{cvd} [@Winnard2013]. Gout is an immune response to the monosodium urate crystals that are formed from the precipitation of urate from the blood and \gls{hu} is a prerequisite for the formation of these crystals [@Merriman2011a].
+An increased level of urate in the blood is called \gls{hu} and is causal of gout. The prevalence of \gls{hu} in Polynesian populations is higher than many other populations [@Gosling2014], and with it are higher prevalences of the co-morbidities of gout, diabetes, obesity, dyslipidemia, kidney disease, and \gls{cvd} [@Winnard2013]. In New Zealand, gout prevalence is ~3.1%, however, prevalence in M\tex{\={a}}ori and Pacific peoples is 6-8% with 40% of individuals with gout also having diabetes or \gls{cvd} [@Winnard2013]. Gout is an immune response to the monosodium urate crystals that are formed from the precipitation of urate from the blood and \gls{hu} is a prerequisite for the formation of these crystals [@Merriman2011a].
 
 <!-- \Gls{hu} in the Pacific is seen in Eastern and Western Polynesia, but the prevalence in the ancestral populations of Near and Remote Oceania is reduced. However, Taiwanese aboriginals also have the higher prevalence of \gls{hu} [@Gosling2014]. -->
 
