--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -41,8 +41,7 @@ This chapter investigates the idea that populations with shared ancestry will di
 * migration to NZ from pacific islands
 -->
 
-“Signatures of selection” in a population can be identified in regions of the genome that exhibit a reduction in genetic variability [@Smith1974;@Kaplan1989;@McVean2007]. This reduction in genetic variation can arise when the phenotype of a neutral benefit allele experiences a favourable change in environmental conditions, or a new allele arises conveying a selective advantage [@Hermisson2005]. This results in an increased frequency of both the allele, and linked sites, within a population [@Smith1974]. Genome-wide scans for signatures of selection have shown that  geographically similar populations share similar genetic signatures [@Coop2009; @pickrell2009signals]. Geography can inhibit migration, leading to local adaptations affecting the allele frequency of local populations, leaving the non-local population allele frequency unaffected [@Coop2009]. New Zealand Polynesians are relatively geographically isolated, with a recent settlement history. 
-<!-- expand on this sentenceto make clear why it was made -->
+“Signatures of selection” in a population can be identified in regions of the genome that exhibit a reduction in genetic variability [@Smith1974;@Kaplan1989;@McVean2007]. This reduction in genetic variation can arise when the phenotype of a neutral benefit allele experiences a favourable change in environmental conditions, or a new allele arises conveying a selective advantage [@Hermisson2005]. This results in an increased frequency of both the allele, and linked sites, within a population [@Smith1974]. Genome-wide scans for signatures of selection have shown that  geographically similar populations share similar genetic signatures [@Coop2009; @pickrell2009signals]. Geography can inhibit migration, leading to local adaptations affecting the allele frequency of local populations, leaving the non-local population allele frequency unaffected [@Coop2009]. New Zealand Polynesians are relatively geographically isolated, with a recent settlement history, this means that any signiatures of selection found and not shared with other populations are likely to be recent and a localised adaptation. 
 
 <!-- need to update with Lisa's comments which were
 - remote oceania is beyond solomon islands
@@ -52,7 +51,7 @@ This chapter investigates the idea that populations with shared ancestry will di
 - explain east/west split
 -->
 
-The history of Polynesian migration starts with migration out of Africa (50-100 kya, @Nielsen2017), tracking up to the Levant and Arabian peninsula (45-55 kya) and splitting into South Asia, Indonesia, and Australia (50kya,  @Kivisild1999; @Quintana-Murci1999). Concurrently the migration  to Europe was occurring (45 kya). From South Asia the migration continued with the peopling of East Asia (20kya, @Groucutt2015). <!--Lisa: The Pacific – or if you really are talking about Remote Oceania, you are talking about Lapita, which first appears in Near Oceania about 3300BP where they interact with the peoples who have been there for at least 40,000 years and then by 3,000 they are the first to establish settlement on the islands of New Caledonia, Vanuatu, Fiji, Samoa and Tonga. THEN around 1-1.2 kya we have the settlement of the rest of the Polynesian triangle, including the Cook Is avout 1,000 BP and New Zealand about 750 - 800 BP. --> The Pacific was settled in two events, the first was the settlement of Near Oceania (40 kya) followed by the settlement of Remote Oceania, reaching Western Polynesia (Samoa and Tonga) during the Lapita expansion (3 kya, @Matisoo-Smith2015; @Skoglund2016). Eastern Polynesia (including the Cook Islands) was then settled (1–1.2 kya, @Wilmshurst2011). The final region of the Polynesian triangle to be settled was that of New Zealand by \gls{nz} M$\bar{a}$ori, occurring 800 ya [@Duggan2014; @Matisoo-Smith2015].
+The history of Polynesian migration starts with migration out of Africa (50-100 kya, @Nielsen2017), tracking up to the Levant and Arabian peninsula (45-55 kya) and splitting into South Asia, Indonesia, and Australia (50kya,  @Kivisild1999; @Quintana-Murci1999). Concurrently the migration  to Europe was occurring (45 kya). From South Asia the migration continued with the peopling of East Asia (20kya, @Groucutt2015). <!--Lisa: The Pacific – or if you really are talking about Remote Oceania, you are talking about Lapita, which first appears in Near Oceania about 3300BP where they interact with the peoples who have been there for at least 40,000 years and then by 3,000 they are the first to establish settlement on the islands of New Caledonia, Vanuatu, Fiji, Samoa and Tonga. THEN around 1-1.2 kya we have the settlement of the rest of the Polynesian triangle, including the Cook Is avout 1,000 BP and New Zealand about 750 - 800 BP. --> The Pacific was settled in two events, the first was the settlement of Near Oceania (40 kya) followed by the settlement of Remote Oceania, reaching Western Polynesia (Samoa and Tonga) during the Lapita expansion (3 kya, @Matisoo-Smith2015; @Skoglund2016). Eastern Polynesia (including the Cook Islands) was then settled (1–1.2 kya, @Wilmshurst2011). The final region of the Polynesian triangle to be settled was that of \gls{nz} by \gls{nz} M\tex{\={a}}ori, occurring 800 ya [@Duggan2014; @Matisoo-Smith2015].
 
 <!--
 need something about what consitutes east and west polynesia and why that matters - doone in above and following paras
@@ -69,7 +68,7 @@ include paragraph about maori and pacific health in general in new zealand - don
 
 -->
 
-New Zealand M$\bar{a}$ori and Pacific Islanders in New Zealand over the past decade been reporting a decrease in overall health [@MinistryofHealth2016]. Fruit and vegetable intake, and physical activity has also been reported as decreasing, all the while there has been an increase in obesity where there was an adjusted rate ratio for obesity of 1.7 for  M$\bar{a}$ori vs non- M$\bar{a}$ori, and 2.4 for Pacific vs non-Pacific [@MinistryofHealth2016]. The rate of increase in \gls{bmi} for Pacific Islanders was five times that of the rest of the world, and fasting plasma glucose was three to four times higher over the 1980-2008 period [@Hawley2015]. The health disparities are captured in the New Zealand statistics where M$\bar{a}$ori have a mortality rate of 1.8 that of non-M$\bar{a}$ori, with the rates of obesity and diabetes of particular note, with the M$\bar{a}$ori standarised rate of 40.6 (XXX per what?), five times higher than non-M$\bar{a}$ori of 8.1 [@MinistryofHealth2012].
+New Zealand M\tex{\={a}}ori and Pacific Islanders in New Zealand over the past decade been reporting a decrease in overall health [@MinistryofHealth2016]. Fruit and vegetable intake, and physical activity has also been reported as decreasing, all the while there has been an increase in obesity where there was an adjusted rate ratio for obesity of 1.7 for  M\tex{\={a}}ori vs non- M\tex{\={a}}ori, and 2.4 for Pacific vs non-Pacific [@MinistryofHealth2016]. The rate of increase in \gls{bmi} for Pacific Islanders was five times that of the rest of the world, and fasting plasma glucose was three to four times higher over the 1980-2008 period [@Hawley2015]. The health disparities are captured in the New Zealand statistics where M\tex{\={a}}ori have a mortality rate of 1.8  that of non-M\tex{\={a}}ori, with the rates of obesity and diabetes of particular note, with the M\tex{\={a}}ori standarised rate of 40.6 per 100,000, five times higher than non-M\tex{\={a}}ori of 8.1 per 100,000 [@MinistryofHealth2012].
 
 New Zealand Polynesians have inherent elevated serum urate levels and higher prevalence of gout [@Winnard2012; @Winnard2013]. Polynesian populations share a common genetic ancestry with East Asia however, there are Polynesian specific variants associated with increased risk to gout and elevated serum urate [@Phipps-Green2010; @Hollis-Moffatt2012]. Serum urate has been associated with metabolic disorders [@Choi2007;@Choi2007b] and genes involved with complex diseases such as \gls{t2d}, gout, and other metabolic related disorders, have shown evidence for selection [@Zhang2013a; @pickrell2009signals;@Hancock2008]. 
 
