--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -26,7 +26,7 @@
 \usepackage{lscape}
 \newcommand{\blandscape}{\begin{landscape}}
 \newcommand{\elandscape}{\end{landscape}}
-
+\newcommand{\tex}[1]{#1}
 
 \usepackage[acronym,style=super,nogroupskip]{glossaries}
 \usepackage{booktabs}
